<resources>
    <string name="app_name">Pomodoro</string>
    <string name="default_time_display">00:00:00</string>
    <string name="startButtonText">Start</string>
    <string name="reset">Reset</string>
    <string name="worktimeDurationCountdown">00:15:00</string>
    <string name="pauseTimeDuration">00:00:00</string>
    <string name="workTimeDuration">00:15:00</string>
    <string name="countDownView">00:00:00</string>
    <string name="workText">Work duration</string>
    <string name="pauseText">Pause duration</string>
    <string name="repetitions">Repetitions</string>
    <string name="WriteNrOfRepetitions">1</string>
</resources>